# avr-q

./: Makefile  README.md  console.py
.github/workflows/: ci.yml
avr-q/: Cargo.toml  README.md
avr-q-test/: Cargo.toml  Makefile  avr-atmega328p.json  rust-toolchain.toml
avr-q-test/.cargo/: config.toml
avr-q-test/src/: main.rs  uart.rs
avr-q/src/: curveipo.rs  lib.rs  q15p8.rs  q7p8.rs  unit_tests.rs
avr-q/src/unit_tests/: q15p8.rs  q7p8.rs
scripts/: makerelease.sh
